--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "agenda": "^5.0.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.35.0",
     "dotenv": "^16.0.3",
@@ -19,6 +20,7 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
     "streamifier": "^0.1.1",
     "uuid": "^9.0.0",
